--- a/pages/billingManagement/productionPlan/productionPlanDetail.scss
+++ b/pages/billingManagement/productionPlan/productionPlanDetail.scss
@@ -21,5 +21,10 @@
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
+	}
+	
+	.van-popup {
+    width: 90vw;
+    padding: 10px;
   }
 }
