--- a/pages/quotedPriceDetail/quotedPriceDetail.scss
+++ b/pages/quotedPriceDetail/quotedPriceDetail.scss
@@ -76,5 +76,9 @@
   }
   .van-tabs__nav--card .van-tab {
     border-right-color: #27a2fd;
-  }
+	}
+	
+	.noBgColor{
+		background-color: transparent;
+	}
 }
