--- a/components/picker/picker.wxml
+++ b/components/picker/picker.wxml
@@ -1,12 +1,13 @@
 <!--components/picker.wxml-->
 <van-popup show="{{ showDialog }}" position="bottom" bind:close="supplyAreaCancel">
-	<view wx:if="{{!notSearch}}" style="font-size:28rpx; display: flex; justify-content: center;">
-		<view style="display: flex; border: 1px solid #eee; padding: 10px; border-radius: 200px; margin-top: 20px;">
-			<van-icon name="search" /><input type="text" value="{{inputText}}" placeholder="输入内容进行搜索"
-				style="width: 80vw;padding-left: 10px;" bindconfirm="comfirnData" />
+	<view wx:if="{{!notSearch}}" style="font-size:28rpx; display: flex; justify-content: center;padding:10px">
+		<view style="display: flex; border: 1px solid #eee; padding: 10px; border-radius: 200px; ">
+			<van-icon name="search" /><input adjust-position="{{false}}" type="text" value="{{inputText}}"
+				placeholder="输入内容进行搜索" style="width: 80vw;padding-left: 10px;" bindconfirm="comfirnData" />
 			<icon class="icon-small" color="#000" type="cancel" size="23" bindtap="clearInputText"></icon>
 		</view>
 	</view>
+	<view style="width: 100%;margin-top: 50rpx;border-top: 1px #e7e7e7 solid;"></view>
 	<view wx:if="{{showWhite}}" style="height: calc(44px + 264px); overflow: scroll; text-align: center;">
 		<view wx:if="{{level == 2}}">
 			<view wx:for="{{pickerArr}}" style="border-bottom: 1px solid #eee; padding: 10px 0;" bindtap="selectFilter"
