--- a/pages/billingManagement/rawMaterialPlan/rawMaterialPlanDetail.scss
+++ b/pages/billingManagement/rawMaterialPlan/rawMaterialPlanDetail.scss
@@ -2,20 +2,25 @@
 #rawMaterialPlanDetail {
   .ui-radio-index--icon-select {
     color: #27a2fd;
-	}
-	
-	.checkbox-index--van-checkbox__icon--checked {
+  }
+
+  .checkbox-index--van-checkbox__icon--checked {
     background-color: #27a2fd;
     border-color: #27a2fd;
-	}
+  }
 
-	.card{
-		margin-top: 20px;
-	}
+  .card {
+    margin-top: 20px;
+  }
 
-	.noTopRightLeft{
-		border-top: 0px;
-		border-left: 0px;
-		border-right: 0px;
-	}
+  .noTopRightLeft {
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+  }
+
+  .van-popup {
+    width: 90vw;
+    padding: 10px;
+  }
 }
