--- a/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrderDetail.wxml
+++ b/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrderDetail.wxml
@@ -2,7 +2,7 @@
 <view id="transportationDeliveryOrderDetail">
 	<nav-content>
 		<view slot="after">
-			<view>原料计划单详情</view>
+			<view>运输出库单详情</view>
 		</view>
 	</nav-content>
 
@@ -188,12 +188,6 @@
 	<van-popup round show="{{ showPro }}" catchtouchmove='false'>
 		<scroll-view style="height: 50vh;" scroll-y>
 			<view class="tc">
-				<image class="vw50 vh30" wx:if="{{productInfo.image_data.length === 0}}" mode="aspectFit"
-					src="https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220211103236.png">
-				</image>
-				<image class="vw50 vh30" wx:else="{{productInfo.image_data.length !== 0}}" mode="aspectFit"
-					src="{{productInfo.image_data[0]}}" bindtap="openShowImage">
-				</image>
 				<view class="mt10 flex jcc aic">
 					<view>{{productInfo.product_code}}</view>
 					<view wx:if="{{productInfo.craft_list_id}}" class="ml10"
@@ -244,6 +238,14 @@
 						</view>
 					</view>
 				</view>
+			</view>
+			<view class="tc mt10">
+				<image class="vw50 vh30" wx:if="{{productInfo.image_data.length === 0}}" mode="aspectFit"
+					src="https://file.zwyknit.com/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20220211103236.png">
+				</image>
+				<image class="vw50 vh30" wx:else="{{productInfo.image_data.length !== 0}}" mode="aspectFit"
+					src="{{productInfo.image_data[0]}}" bindtap="openShowImage">
+				</image>
 			</view>
 		</scroll-view>
 		<view class="line"></view>
