--- a/pages/manage/manage.wxml
+++ b/pages/manage/manage.wxml
@@ -6,58 +6,53 @@
 		</view>
 	</nav-content>
 	<view class="h100 bg">
-		<view class="pb50">
-			<view class="flex pr20 pl20 jcsb aic borderBox colorWhite w100 manage-list">
-				<view class="flex userInfo vw60" bindtap="bindViewTap">
-					<image class="image" src="{{userInfo.wechat_data.avatarUrl || userInfo.userinfo.wechat_data.avatarUrl}}"
-						mode="aspectFill" />
-					<view class="fz40 ml20">
-						<block wx:if="{{showNoLogin}}">
-							<view bindtap="toLogin">暂未登录</view>
-							<view bindtap="toLogin" class="fz28 mt5">点击立即登录</view>
-						</block>
-						<block wx:elif="{{userInfo === null || userInfo.userinfo === null}}">
-							<view bindtap="toSignUp">{{userInfo.wechat_data.nickName}}</view>
-							<view bindtap="toSignUp" class="fz28 mt5">未完善资料，请填写</view>
-						</block>
-						<block wx:else>
-							<view>{{userInfo.name + '(' + userInfo.user_name +')'}}</view>
-							<view class="fz28 mt5">{{userInfo.userinfo.user_name}}</view>
-						</block>
+		<view class="flex pr20 pl20 jcsb aic borderBox colorWhite w100 manage-list">
+			<view class="flex userInfo" bindtap="bindViewTap">
+				<view class="flex aic">
+					<view style="width:100rpx;height:100rpx;border-radius: 500px;overflow: hidden;">
+						<open-data class="logo" type="userAvatarUrl"></open-data>
 					</view>
-				</view>
-				<view class="vw30">
-					<view class="fr">
-						<!-- 二维码 -->
-						<view wx:if="{{!showNoLogin && userInfo.userinfo.role === 3}}" class="tr" bindtap="openPopup">
-							<image src="https://file.zwyknit.com/erweima.png" style="width: 80rpx;height: 80rpx;"></image>
-						</view>
-						<block wx:if="{{ourUser !== null && userInfo.userinfo !== null}}">
-							<view class="flex fz30 h40 colorBlack">
-								<view class="autoLogos pl5 pr5" style="background-color: white; color: #229CFB;">
-									{{ userInfo.userinfo.process[0] }}</view>
-							</view>
-						</block>
-					</view>
+					<view class="ml20">{{userInfo.name + '(' + userInfo.station +')'}}</view>
 				</view>
 			</view>
 		</view>
 
 		<!-- 菜单 -->
 		<view
-			class="ml20 mr20 mt40 bgColorWhite vw90 flex jcsb flexWarp borderBox pl20 pr20 pt20 pb20 color9E fz30 tc borderRadius16 shadow"
-			style="transform: translateY(-60%);">
-			<view class="{{item.index===1?'':'ml18'}}" wx:for="{{pageList}}" wx:for-item="item" wx:key="title"
-				data-path="{{item.path}}" bindtap="toWitchPage">
-				<image class="sonContainer" src="{{item.icon}}" mode="aspectFill" />
-				<view class="mt5">{{item.title}}</view>
+			class="ml20 mr20 bgColorWhite vw90 flex jcsb flexWarp borderBox pl20 pr20 pt20 pb20 fz30 tc borderRadius16 shadow">
+			<view class="flex jcsb w100">
+				<view class="color9">手机号</view>
+				<view>{{userInfo.user_name}}</view>
+			</view>
+			<view class="line"></view>
+			<view class="flex jcsb w100" bindtap="bindCompany">
+				<view class="color9">绑定工厂</view>
+				<view>{{userInfo.bind_wechat===1?userInfo.alias:"未绑定"}}
+					<van-icon name="arrow" />
+				</view>
 			</view>
 		</view>
 
-		<!-- <view class="flex ml50" style="animation: example 1.4s linear 0s infinite alternate;">
-			<view class="bgColorRed vw20 vh20" style="border-radius:50px 50px 0 0;transform:translateX(28px) rotate(-45deg);"></view>
-			<view class="bgColorRed vw20 vh20" style="border-radius:50px 50px 0 0;transform: rotate(45deg);"></view>
-		</view> -->
+		<view
+			class="ml20 mr20 mt20 bgColorWhite vw90 flex jcsb flexWarp borderBox pl20 pr20 pt20 pb20 fz30 tc borderRadius16 shadow">
+			<view class="flex jcsb w100" bindtap='toMyJurisdiction'>
+				<view class="color9">我的权限</view>
+				<view>共{{userInfo.quanxianLen}}项<van-icon name="arrow" /></view>
+			</view>
+			<view class="line"></view>
+			<view class="flex jcsb w100" bindtap="bindCompany">
+				<view class="color9">修改密码</view>
+				<view>{{userInfo.bind_wechat===1?userInfo.alias:"未绑定"}}
+					<van-icon name="arrow" />
+				</view>
+			</view>
+		</view>
 	</view>
+
+	<van-dialog id="van-dialog" confirm-button-color="#27A2FD" />
 	<l-message content="{{content}}" />
+	<view class="pof bgColor27A2 colorWhite tc"
+		style="right:10%;bottom:12%;width:30px;height: 30px; line-height:32px;border-radius:200px;" bindtap="GetSandCode">
+		<van-icon name="scan" size="18px" />
+	</view>
 </view>
